--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "final-form": "^4.20.2",
+    "final-form-material-ui": "^0.3.0",
     "material-ui": "^0.20.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-final-form": "^6.5.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
