--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.3",
+    "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "validator": "^13.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
